[fix]:更改mysql驱动名称

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8086
 
 #druid数据源配置
-druid.datasource.url=jdbc:mysql://127.0.0.1:3306/work_submit_system?characterEncoding=UTF8
+druid.datasource.url=jdbc:mysql://127.0.0.1:3306/work_submit_system?characterEncoding=UTF8&serverTimezone=UTC
 druid.datasource.username=root
 druid.datasource.password=camishama123
-druid.datasource.driverClassName=com.mysql.jdbc.Driver
+druid.datasource.driverClassName=com.mysql.cj.jdbc.Driver
